updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I currently work as an accountant</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Irvine, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking, reading, painting, and traveling</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Programing and working on AI or working in Cybersecurity</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Irvine, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>There is a lot of flexibility and creativity in this career.</p>
     </section>
 
     <footer id="footer">
